--- a/settings.ini
+++ b/settings.ini
@@ -27,6 +27,8 @@ console_scripts = mdseo_desc=mdseo.core:chk_desc
 	mdseo_len=mdseo.core:chk_len
 	mdseo_desc_len=mdseo.core:chk_desc_len
 	mdseo_dupe_title=mdseo.core:chk_dupe_title
+	mdseo_slug=mdseo.core:chk_slug
+	mdseo_slug_len=mdseo.core:chk_slug_len
 lib_path = mdseo
 title = mdseo
 
