--- a/settings.ini
+++ b/settings.ini
@@ -22,14 +22,9 @@ recursive = False
 doc_host = https://outerbounds.github.io
 doc_baseurl = /mdseo/
 git_url = https://github.com/outerbounds/mdseo/tree/master/
-console_scripts = mdseo_desc=mdseo.core:chk_desc
-	mdseo_img=mdseo.core:chk_img
-	mdseo_len=mdseo.core:chk_len
-	mdseo_desc_len=mdseo.core:chk_desc_len
+console_scripts = mdseo_len=mdseo.core:chk_len
 	mdseo_dupe_title=mdseo.core:chk_dupe_title
-	mdseo_slug=mdseo.core:chk_slug
-	mdseo_slug_len=mdseo.core:chk_slug_len
-	mdseo_author=mdseo.core:chk_author
+	mdseo_chk_fm=mdseo.core:chk_fm
 lib_path = mdseo
 title = mdseo
 
